--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,7 +6,7 @@
     <%= form_for @item, html: {class: 'new-item-form'} do |f| %>
       <div>
         <%= f.label :name %>
-        <%= f.text_field :name %>
+        <%= f.text_field :name, placeholder: 'Name' %>
       </div>
       <div class="ing">
         <%= f.label :ingredients %>
