--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -4,6 +4,9 @@
       <div class="current-dish">
       </div>
       <button class='new-dish' data-path="<%=new_dish_path %>">Click Here to Add a Dish!</button>
+      <div class='opening'>
+        <h3>Welcome, Here you can create a dish and it's contents. Here's a chance to create a full meal of your own! Click the button above to begin!</h3>
+      </div>
     </div>
 
     <div class='right-container'>
