added sentence to instructions

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
 <div class='new-item-container in'>
   <div>
-    <b>Now that your dish has a name, let's add some elements to it! Enter the item name, and then the ingredients (separated by commas). Or press 'Finish Dish' at any time to complete your dish! </b>
+    <b>Now that your dish has a name, let's add some elements to it! Enter the item name, and then the ingredients (separated by commas). Add as many as items as you'd like, or press 'Finish Dish' at any time to complete your dish! </b>
   </div>
   <div>
     <%= form_for @item, html: {class: 'new-item-form'} do |f| %>
