change a-tag to button

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -14,7 +14,7 @@
         </div>
       </div>
           <%= f.submit 'Submit' %>
-          <a class='add' href="#">Add another ingredient!</a>
+          <button class='add' href="#">Add another ingredient!</button>
     <% end %>
   </div>
   <button class='finish'>Finish Dish</button>
