adding quantity field

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -11,6 +11,7 @@
       <div class="items">
         <div class="ing">
             Ingredient: <input type='text' name='ingredients[1]' placeholder='Ingredient'>
+            Ingredient: <input type='text' name='ingredients[1]' placeholder='Ingredient'>
         </div>
       </div>
           <%= f.submit 'Submit' %>
