--- a/app/assets/stylesheets/dish.css
+++ b/app/assets/stylesheets/dish.css
@@ -53,7 +53,9 @@ form {
 }
 
 .ing {
-  margin-left: -2em;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  margin-left: -1em;
 }
 
 .left-container {
